update placeholder logo and bg color

--- a/scss/form-builder.scss
+++ b/scss/form-builder.scss
@@ -22,7 +22,7 @@
     // position: relative;
     // width: 70%;
     border: 1px solid #ddd;
-    background: #fff;
+    background:#F9F9F9;
     padding: 10px;
     box-shadow: 0 0 2px 1px rgba(0,0,0,0.1);
     min-height: 750px;
