--- a/scss/form-builder.scss
+++ b/scss/form-builder.scss
@@ -260,9 +260,9 @@
       li {
         cursor: pointer;
         list-style: none;
-        margin: 5px;
+        margin: 8px;
         padding: 10px;
-        border: 1px dashed #ddd;
+        border: 1px dashed #000;
         display: flex;
         align-items: center;
         i {
