--- a/scss/form-builder.scss
+++ b/scss/form-builder.scss
@@ -18,6 +18,7 @@
 }
 
 .react-form-builder {
+  position: relative;
   .react-form-builder-preview {
     // position: relative;
     // width: 70%;
@@ -257,6 +258,7 @@
     }
     ul {
       padding: 0;
+      position: fixed;
       li {
         cursor: pointer;
         list-style: none;
@@ -265,6 +267,8 @@
         border: 1px dashed #000;
         display: flex;
         align-items: center;
+        width: 135%;
+
         i {
           margin: 0 15px 0 10px;
         }
