move conditions and listinput to form builder

--- a/scss/form-builder.scss
+++ b/scss/form-builder.scss
@@ -250,7 +250,7 @@
 
     h4 {
       margin-top: 0;
-      text-align: center;
+      padding-left: 10px;
     }
     .form-group {
       padding: 10px;
