--- a/scss/form-builder.scss
+++ b/scss/form-builder.scss
@@ -267,10 +267,15 @@
         border: 1px dashed #000;
         display: flex;
         align-items: center;
-        width: 135%;
+        width: 100%;
 
         i {
           margin: 0 15px 0 10px;
+        }
+
+        i:last-child:hover {
+          color: #1877ea;
+          transition: color 0.2s;
         }
       }
     }
