Scrollable lists of element type fix.

--- a/scss/form-builder.scss
+++ b/scss/form-builder.scss
@@ -1,5 +1,4 @@
 .react-form-builder-form {
-
   .rfb-item {
     label {
       span {
@@ -8,6 +7,7 @@
         padding: 0 10px;
       }
     }
+
     .row {
       padding: 0 25px;
       border: 1px solid #6da6e3;
@@ -23,11 +23,11 @@
     // position: relative;
     // width: 70%;
     border: 1px solid #ddd;
-    background:#F9F9F9;
+    background: #f9f9f9;
     padding: 10px;
-    box-shadow: 0 0 2px 1px rgba(0,0,0,0.1);
+    box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.1);
     min-height: 750px;
-    width:100%;
+    width: 100%;
 
     .preview-page-break {
       padding: 5px 0;
@@ -54,6 +54,7 @@
     .bold {
       font-weight: bold;
     }
+
     .italic {
       font-style: italic;
     }
@@ -71,6 +72,7 @@
       display: inline-block !important;
       margin-right: 10px !important;
     }
+
     .form-label {
       display: block !important;
     }
@@ -86,10 +88,11 @@
       height: 100%;
       // width: 0;
       width: 715px;
-      transition: .5s;
+      transition: 0.5s;
       overflow-y: auto;
 
-      h4, .dismiss-edit {
+      h4,
+      .dismiss-edit {
         margin-bottom: 30px;
       }
       .dismiss-edit {
@@ -120,14 +123,18 @@
           }
         }
       }
+
       .dynamic-option-list {
         margin-bottom: 15px;
+
         ul {
           list-style-type: none;
           margin: 0;
           padding: 0;
+
           li {
             margin-top: 10px;
+
             input {
               &.form-control {
                 width: 84.26%;
@@ -138,12 +145,15 @@
                   margin-top: 0;
                 }
               }
+
               margin-right: 10px;
             }
+
             button {
               float: left;
               margin-right: 5px;
             }
+
             .dynamic-options-actions-buttons {
               margin-left: 20px;
             }
@@ -151,8 +161,9 @@
         }
       }
     }
+
     .Sortable {
-      transition: opacity .25s ease-in;
+      transition: opacity 0.25s ease-in;
       position: relative;
       cursor: move;
       -webkit-touch-callout: none;
@@ -161,30 +172,41 @@
       -moz-user-select: none;
       -ms-user-select: none;
       user-select: none;
+
       .rfb-item {
-       
         padding: 10px 20px;
+
         &.SortableItem {
           position: relative;
+
           .form-group {
             pointer-events: none;
-            label, select, input, a {
+            label,
+            select,
+            input,
+            a {
               cursor: move;
             }
-            input[type='date'] {
+
+            input[type="date"] {
               height: 42px;
             }
+
             .react-star-rating {
               display: block;
             }
-            .checkbox-label, .radio-label {
+
+            .checkbox-label,
+            .radio-label {
               font-weight: normal;
               display: block;
             }
+
             .label-required {
               margin-left: 5px;
             }
           }
+
           &.is-dragging {
             position: absolute;
             z-index: 1688;
@@ -194,39 +216,48 @@
             padding: 10px 20px;
           }
         }
+
         &.is-placeholder {
           display: block;
           z-index: auto;
-          opacity: .4;
+          opacity: 0.4;
           border: 2px #ccc solid;
         }
+
         .toolbar-header {
           opacity: 0; // visible
           z-index: 100;
           position: relative;
+
           .label {
             position: absolute;
             left: 20px;
           }
+
           .toolbar-header-buttons {
             position: absolute;
             right: 20px;
-            margin-top:-20px;
+            margin-top: -20px;
           }
         }
+
         &:hover {
           box-shadow: inset 0 0 5px #ddd;
           background: #fff;
-          select, input {
+
+          select,
+          input {
             cursor: move;
             pointer-events: none;
           }
+
           .toolbar-header {
             opacity: 1;
           }
         }
       }
     }
+
     &.is-editing {
       // .Sortable {
       //   opacity: .5;
@@ -235,10 +266,10 @@
       .edit-form {
         z-index: 2000;
         border-right: 1px solid #ddd;
-        box-shadow: 0 0 2px 1px rgba(0,0,0,0.1);
+        box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.1);
         // width: 80%;
         left: 0;
-        transition: .5s;
+        transition: 0.5s;
       }
     }
   }
@@ -252,17 +283,24 @@
       margin-top: 0;
       padding-left: 10px;
     }
+
     .form-group {
       padding: 10px;
       border: 1px dashed #ddd;
     }
+
     ul {
       padding: 0;
-      position: fixed;
+      overflow-y: auto;
+      overflow-x: hidden;
+      position: sticky;
+      top: 0;
+      max-height: 100vh;
+
       li {
         cursor: pointer;
         list-style: none;
-        margin: 8px;
+        margin-top: 8px;
         padding: 10px;
         border: 1px dashed #000;
         display: flex;
@@ -284,6 +322,7 @@
 
 .image-upload-container {
   position: relative;
+
   .image-upload {
     position: relative;
     opacity: 0;
@@ -301,12 +340,12 @@
 
 .image-upload-preview {
   border: 4px solid #fff;
-  box-shadow: 0 0 2px 2px rgba(0,0,0,0.1);
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .file-upload-preview {
   border: 4px solid #fff;
-  box-shadow: 0 0 2px 2px rgba(0,0,0,0.1);
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
   padding: 5px;
 }
 
@@ -320,7 +359,7 @@
   padding: 10px;
 }
 
-@media ( max-width: $screen-sm-min ) {
+@media (max-width: $screen-sm-min) {
   .react-form-builder {
     position: relative;
 
@@ -342,6 +381,7 @@
 
       .Sortable .rfb-item .toolbar-header .toolbar-header-buttons {
         right: -15px;
+
         .btn {
           margin-right: 5px;
           border-radius: 50%;
@@ -353,7 +393,6 @@
     }
 
     .react-form-builder-toolbar {
-
       h4 {
         padding: 10px;
         background: #7a0019;
@@ -368,8 +407,8 @@
       -webkit-transition: transform 0.5s;
       transition: transform 0.5s;
 
-      -webkit-transform: translate(0,0);
-      transform: translate(0,0);
+      -webkit-transform: translate(0, 0);
+      transform: translate(0, 0);
 
       right: 0;
       border-top: 2px solid #ccc;
@@ -381,8 +420,8 @@
     }
 
     .active-toolbar {
-      -webkit-transform: translate(0,-300px);
-      transform: translate(0,-300px);
+      -webkit-transform: translate(0, -300px);
+      transform: translate(0, -300px);
     }
   }
 
@@ -403,15 +442,18 @@
   display: block;
   width: 100%;
   padding: 0 4px;
+
   label {
     text-align: center;
     display: inline-block;
     padding: 0;
     margin: 0;
     font-weight: normal;
+
     &:first-of-type {
       text-align: left;
     }
+
     &:last-of-type {
       text-align: right;
     }
@@ -448,14 +490,15 @@
 }
 
 .form-place-holder {
-  margin:10px; 
-  border:2px solid #bbb;
-  -moz-border-radius:5px;
-  -webkit-border-radius:5px;
-  border-radius:5px;
-  padding:25px;
-  text-align:center;
-  font:20pt bold,"Vollkorn";color:#bbb
+  margin: 10px;
+  border: 2px solid #bbb;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  padding: 25px;
+  text-align: center;
+  font: 20pt bold, "Vollkorn";
+  color: #bbb;
 }
 
 .form-place-holder-hidden {
