--- a/scss/form-builder.scss
+++ b/scss/form-builder.scss
@@ -275,9 +275,14 @@
   }
 
   .react-form-builder-toolbar {
-    width: 100%;
     background: #fff;
-    margin-top: -30px;
+    height: 53vh;
+    position: fixed;
+    left: 78%;
+    top: 50%;
+    border: 1px dashed black;
+    padding: 8px;
+    width: 290px;
 
     h4 {
       margin-top: 0;
@@ -290,11 +295,10 @@
     }
 
     ul {
-      padding: 0;
       overflow-y: scroll;
       overflow-x: hidden;
-      position: fixed;
-      height: 500px;
+      height: 46vh;
+      padding: 10px;
 
       li {
         cursor: pointer;
