--- a/scss/form-builder.scss
+++ b/scss/form-builder.scss
@@ -19,15 +19,14 @@
 
 .react-form-builder {
   position: relative;
+  display: flex;
   .react-form-builder-preview {
-    // position: relative;
-    // width: 70%;
     border: 1px solid #ddd;
     background: #f9f9f9;
     padding: 10px;
     box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.1);
     min-height: 750px;
-    width: 100%;
+    min-width: 55vw;
 
     .preview-page-break {
       padding: 5px 0;
@@ -275,14 +274,9 @@
   }
 
   .react-form-builder-toolbar {
-    background: #fff;
-    height: 53vh;
-    position: fixed;
-    left: 78%;
-    top: 50%;
-    border: 1px dashed black;
-    padding: 8px;
-    width: 290px;
+    width: 25vw;
+    position: sticky;
+    top: 10px;
 
     h4 {
       margin-top: 0;
@@ -297,7 +291,7 @@
     ul {
       overflow-y: scroll;
       overflow-x: hidden;
-      height: 46vh;
+      height: 70vh;
       padding: 10px;
 
       li {
